[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Popup for level transition.png" type="Texture" id=1]
[ext_resource path="res://Elements/Buttons/Popup Buttons/Replay_level_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elements/Buttons/Popup Buttons/Next_level_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Elements/Buttons/Popup Buttons/Home_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game&UI/Level_transition.gd" type="Script" id=5]

[node name="Level_transition" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 176, 145 )
scale = Vector2( 1.53368, 1.15342 )
texture = ExtResource( 1 )

[node name="Home_button" parent="." instance=ExtResource( 4 )]
margin_left = 170.0
margin_top = 148.0
margin_right = 221.0
margin_bottom = 168.0

[node name="Next_level_button" parent="." instance=ExtResource( 3 )]
margin_left = 257.0
margin_top = 146.0
margin_right = 337.0
margin_bottom = 166.0

[node name="Replay_level_button" parent="." instance=ExtResource( 2 )]
margin_left = 23.0
margin_top = 145.0
margin_right = 140.0
margin_bottom = 165.0

[connection signal="pressed" from="Home_button" to="." method="_on_Home_button_pressed"]
[connection signal="pressed" from="Next_level_button" to="." method="_on_Next_level_button_pressed"]
[connection signal="pressed" from="Replay_level_button" to="." method="_on_Replay_level_button_pressed"]
